# Argos

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  log.int32_publisher.20260415113041.txt
.devcontainer/: devcontainer.json  post_create.sh
components/esp8266_wrapper/: esp8266_wrapper.h
docs/: build_guide.md  expo_demo_runbook.md  expo_execution_plan.md  expo_master_todo.md  expo_story.md  pi_hardware_contract.md  ros2_topic_contract.md
firmware/esp32c6/: .gitignore  CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  main.c
microcontroller/: launch_robot_dog_debug_dashboard.cmd  launch_robot_dog_debug_dashboard.ps1  robot_dog_leg_kinematics_visualization.jsx
microcontroller/robot_dog_debug_dashboard/: index.html  launch.cmd  launch.ps1  package-lock.json  package.json  vite.config.js
ros2_ws/argos_control/: Config.py  Controller.py  Kinematics.py  State.py  __init__.py  command_mux_node.py  command_odometry_node.py  control_core.py  demo_commander_node.py  foothold_checker_node.py  gait_planner_node.py  joint_command_publisher_node.py  limit_finder.py  ros_contract.py  ros_helpers.py  ros_support.py  safety_node.py  servo_test.py  single_leg_test.py
ros2_ws/src/argos_mission/: package.xml  setup.cfg  setup.py
ros2_ws/src/quadruped_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/quadruped_bringup/config/: .gitkeep  99-argos-devices.rules  control_stack.yaml  expo_demo.rviz  mission_stack.yaml  rplidar_view.rviz  slam_toolbox.yaml
ros2_ws/src/quadruped_bringup/launch/: control_stack.launch.py  esp32_bridge.launch.py  expo_demo.launch.py  full_system.launch.py  mission_stack.launch.py  realsense.launch.py  rplidar.launch.py  sensors.launch.py  slam.launch.py  state_publisher.launch.py  teensy_bridge.launch.py  view_camera.launch.py  view_lidar.launch.py
(+57 files in other folders)
