<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quadruped_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the Argos SAR Quadruped</description>
  <maintainer email="argos@gatech.edu">Argos Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
